--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
 		"format:check": "prettier . --check"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^5.2.2",
+		"@radix-ui/react-avatar": "^1.1.11",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.8",
 		"@radix-ui/react-navigation-menu": "^1.2.14",
+		"@radix-ui/react-separator": "^1.1.8",
 		"@radix-ui/react-slot": "^1.2.4",
 		"@supabase/ssr": "^0.8.0",
 		"@supabase/supabase-js": "^2.87.1",
@@ -25,9 +30,13 @@
 		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.556.0",
 		"next": "16.0.8",
+		"next-themes": "^0.4.6",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
+		"react-hook-form": "^7.68.0",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0",
+		"zod": "^4.1.13",
 		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
