--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.556.0",
 		"next": "16.0.8",
+		"next-intl": "^4.6.0",
 		"next-themes": "^0.4.6",
 		"react": "19.2.1",
 		"react-dom": "19.2.1",
